added TemplateTest